--- a/src/rhyme_ideal_gas/src/rhyme_chemistry/CMakeLists.txt
+++ b/src/rhyme_ideal_gas/src/rhyme_chemistry/CMakeLists.txt
@@ -5,12 +5,16 @@ project( rhyme_chemistry )
 
 set( deps
   rhyme_nombre
+  rhyme_units
   rhyme_log
 )
 
 set( internal_deps )
 
 set( srcs
+  src/rhyme_chemistry_init.f90
+  src/rhyme_chemistry_mu.f90
+  src/rhyme_chemistry_one_over_mu.f90
   src/rhyme_chemistry.f90
 )
 
