--- a/src/rhyme_nombre/CMakeLists.txt
+++ b/src/rhyme_nombre/CMakeLists.txt
@@ -28,6 +28,7 @@ set( srcs
   src/rhyme_nombre_units_is_equal_to.f90
   src/rhyme_nombre_units.f90
 
+  src/rhyme_nombre_get_value.f90
   src/rhyme_nombre_print.f90
   src/rhyme_nombre_div.f90
   src/rhyme_nombre_mul.f90
