[WIP] Units - fix: updated samr module based on new factories

--- a/CMakeGlobal/CMakeLists.txt
+++ b/CMakeGlobal/CMakeLists.txt
@@ -37,7 +37,7 @@ enable_testing()
 
 add_custom_target( ${PROJECT_NAME}_watch
   VERBATIM COMMAND /bin/sh -c " \
-  inotifywait -m -r -e modify -e create -e delete -e move ${PROJECT_SOURCE_DIR}/src \
+  inotifywait -m -r -e modify -e create -e delete -e move ${PROJECT_SOURCE_DIR} \
   | while read -r filename event; do \
     cmake .. && make -j8; ctest -j8 --output-on-failure --timeout 50; \
   done"
