[WIP] Units - fix: updated mhws module based on new factories

--- a/src/rhyme_muscl_hancock/src/rhyme_mh_workspace/CMakeLists.txt
+++ b/src/rhyme_muscl_hancock/src/rhyme_mh_workspace/CMakeLists.txt
@@ -13,6 +13,7 @@ set( internal_deps )
 
 set( srcs
   src/rhyme_mh_workspace_check.f90
+  src/rhyme_mh_workspace_init.f90
   src/rhyme_mh_workspace.f90
 )
 
