[WIP] Units - fix (wip): updated mh module based on new factories

--- a/src/rhyme_muscl_hancock/CMakeLists.txt
+++ b/src/rhyme_muscl_hancock/CMakeLists.txt
@@ -19,6 +19,7 @@ set( srcs
   src/rhyme_muscl_hancock_solve_memory_intensive.f90
   src/rhyme_muscl_hancock_solve_cpu_intensive.f90
   src/rhyme_muscl_hancock_solve.f90
+  src/rhyme_muscl_hancock_init.f90
   src/rhyme_muscl_hancock.f90
 )
 
