[WIP] Units - fix: updated modules based on new log section implementation

--- a/src/rhyme_string/CMakeLists.txt
+++ b/src/rhyme_string/CMakeLists.txt
@@ -7,6 +7,7 @@ set( deps )
 set( internal_deps )
 
 set( srcs
+  src/rhyme_string_get_filename.f90
   src/rhyme_string_is_nan.f90
   src/rhyme_string_to_string.f90
   src/rhyme_string.f90
