refactor: MH module by: Adding mh_factory Removing CFL module

--- a/src/rhyme_muscl_hancock/tests/CMakeLists.txt
+++ b/src/rhyme_muscl_hancock/tests/CMakeLists.txt
@@ -1,11 +1,10 @@
 project ( rhyme_muscl_hancock_tests )
 set( test_subject rhyme_muscl_hancock )
 
-set( CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} -O3" )
+set( CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS}" )
 
 set ( factories
   rhyme_chombo
-  rhyme_cfl
   rhyme_ideal_gas
   rhyme_hydro_base
   rhyme_samr
