--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,17 +1,40 @@
-cmake_minimum_required( VERSION 3.7 )
+cmake_minimum_required( VERSION 3.12 )
 
 project( rhyme )
+
+set( HYDRO_SOLVER "MH" ) # { MH (for MUSCL_Hancock), NONE }
+set( RT_SOLVER "MCRT" ) # { MCRT (for Monte-Carlo Ray Tracing), NONE }
+set( NUMBER_OF_DIM 3 )
+set( NUMBER_OF_SPECIES 3 )
+
 
 enable_language( Fortran )
 
 
 if ( "${CMAKE_Fortran_COMPILER_ID}" STREQUAL "Intel" )
-  add_compile_options( -warn all -O3 )
+  add_compile_options( -warn all -fpp -O3 )
   set( CMAKE_Fortran_FLAGS "-stand f08" )
 elseif( "${CMAKE_Fortran_COMPILER_ID}" STREQUAL "GNU" )
-  add_compile_options( -Wall -Wextra -O3 )
+  add_compile_options( -Wall -Wextra -cpp -O3 ) # -fopt-info )
   set( CMAKE_Fortran_FLAGS "-std=f2008" )
 endif()
+
+
+# Calculating Number of Components (NCMP)
+set( NCMP 1 ) # For density
+
+if( NOT "${HYDRO_SOLVER}" STREQUAL "NONE" )
+  # Adding momenta and total energy
+  math( EXPR NCMP "${NCMP}+${NUMBER_OF_DIM}+1" )
+endif()
+
+if( NOT "${RT_SOLVER}" STREQUAL "NONE" )
+  # Adding temperature and ionization fractions
+  math( EXPR NCMP "${NCMP}+1+${NUMBER_OF_SPECIES}" )
+endif()
+
+add_compile_definitions( NDIM=${NUMBER_OF_DIM} )
+add_compile_definitions( NCMP=${NCMP} )
 
 
 set( LIB_DIR ${CMAKE_BINARY_DIR}/lib CACHE PATH "Lib directory" )
