--- a/src/rhyme_samr/tests/CMakeLists.txt
+++ b/src/rhyme_samr/tests/CMakeLists.txt
@@ -9,3 +9,6 @@ set( test_deps
 
 set( proj_src_dir ../.. )
 include( ${CMAKE_CURRENT_SOURCE_DIR}/../../../CMakeGlobal/tests/CMakeLists.txt )
+
+if_not_defined_define( "NDIM" 3 )
+if_not_defined_define( "NCMP" 5 )
