--- a/src/rhyme_samr/CMakeLists.txt
+++ b/src/rhyme_samr/CMakeLists.txt
@@ -24,3 +24,4 @@ set( proj_src_dir .. )
 include( ${CMAKE_CURRENT_SOURCE_DIR}/../../CMakeGlobal/CMakeLists.txt )
 
 if_not_defined_define( "NDIM" 3 )
+if_not_defined_define( "NCMP" 5 )
