--- a/src/rhyme_assertion/CMakeLists.txt
+++ b/src/rhyme_assertion/CMakeLists.txt
@@ -40,5 +40,5 @@ set( srcs
   src/rhyme_assertion.f90
 )
 
-set( proj_src_dir .. )
+set( rhyme_src_dir .. )
 include( ${CMAKE_CURRENT_SOURCE_DIR}/../../CMakeGlobal/CMakeLists.txt )
