--- a/src/rhyme_chombo/src/rhyme_hdf5_util/CMakeLists.txt
+++ b/src/rhyme_chombo/src/rhyme_hdf5_util/CMakeLists.txt
@@ -16,7 +16,7 @@ set( srcs
   src/rhyme_hdf5_util.f90
 )
 
-set( proj_src_dir ../../.. )
+set( rhyme_src_dir ../../.. )
 include( ${CMAKE_CURRENT_SOURCE_DIR}/../../../../CMakeGlobal/CMakeLists.txt )
 
 find_package( HDF5 REQUIRED COMPONENTS Fortran )
