--- a/src/rhyme_initial_condition/tests/CMakeLists.txt
+++ b/src/rhyme_initial_condition/tests/CMakeLists.txt
@@ -16,5 +16,5 @@ configure_file(
   COPYONLY
 )
 
-set( proj_src_dir ../.. )
+set( rhyme_src_dir ../.. )
 include( ${CMAKE_CURRENT_SOURCE_DIR}/../../../CMakeGlobal/tests/CMakeLists.txt )
