--- a/src/rhyme_samr/tests/CMakeLists.txt
+++ b/src/rhyme_samr/tests/CMakeLists.txt
@@ -7,8 +7,11 @@ set( test_deps
   rhyme_assertion
 )
 
-set( proj_src_dir ../.. )
+set( rhyme_src_dir ../.. )
 include( ${CMAKE_CURRENT_SOURCE_DIR}/../../../CMakeGlobal/tests/CMakeLists.txt )
 
+if_not_defined_define( HYDRO_SOLVER )
+if_not_defined_define( RT_SOLVER )
 if_not_defined_define( "NDIM" 3 )
 if_not_defined_define( "NCMP" 5 )
+if_not_defined_define( "NSPE" 3 )
