--- a/src/rhyme_cfl/CMakeLists.txt
+++ b/src/rhyme_cfl/CMakeLists.txt
@@ -22,5 +22,5 @@ set( srcs
   src/rhyme_cfl.f90
 )
 
-set( proj_src_dir .. )
+set( rhyme_src_dir .. )
 include( ${CMAKE_CURRENT_SOURCE_DIR}/../../CMakeGlobal/CMakeLists.txt )
