--- a/src/rhyme_drawing/CMakeLists.txt
+++ b/src/rhyme_drawing/CMakeLists.txt
@@ -29,5 +29,5 @@ set( srcs
   src/rhyme_drawing.f90
 )
 
-set( proj_src_dir .. )
+set( rhyme_src_dir .. )
 include( ${CMAKE_CURRENT_SOURCE_DIR}/../../CMakeGlobal/CMakeLists.txt )
