--- a/src/rhyme_initial_condition/CMakeLists.txt
+++ b/src/rhyme_initial_condition/CMakeLists.txt
@@ -27,5 +27,5 @@ set( srcs
   src/rhyme_initial_condition.f90
 )
 
-set( proj_src_dir .. )
+set( rhyme_src_dir .. )
 include( ${CMAKE_CURRENT_SOURCE_DIR}/../../CMakeGlobal/CMakeLists.txt )
