--- a/src/rhyme_log/src/rhyme_logger_util/CMakeLists.txt
+++ b/src/rhyme_log/src/rhyme_logger_util/CMakeLists.txt
@@ -27,5 +27,5 @@ set( srcs
   src/rhyme_logger_util_section.f90
 )
 
-set( proj_src_dir ../../.. )
+set( rhyme_src_dir ../../.. )
 include( ${CMAKE_CURRENT_SOURCE_DIR}/../../../../CMakeGlobal/CMakeLists.txt )
