--- a/src/rhyme_log/tests/CMakeLists.txt
+++ b/src/rhyme_log/tests/CMakeLists.txt
@@ -4,5 +4,5 @@ set( test_subject rhyme_log )
 set( factories )
 set( test_deps )
 
-set( proj_src_dir ../.. )
+set( rhyme_src_dir ../.. )
 include( ${CMAKE_CURRENT_SOURCE_DIR}/../../../CMakeGlobal/tests/CMakeLists.txt )
