--- a/src/rhyme_nombre/CMakeLists.txt
+++ b/src/rhyme_nombre/CMakeLists.txt
@@ -43,5 +43,5 @@ set( srcs
   src/rhyme_nombre.f90
 )
 
-set( proj_src_dir .. )
+set( rhyme_src_dir .. )
 include( ${CMAKE_CURRENT_SOURCE_DIR}/../../CMakeGlobal/CMakeLists.txt )
