--- a/src/rhyme_samr_bc/CMakeLists.txt
+++ b/src/rhyme_samr_bc/CMakeLists.txt
@@ -21,5 +21,5 @@ set( srcs
   src/rhyme_samr_bc.f90
 )
 
-set( proj_src_dir .. )
+set( rhyme_src_dir .. )
 include( ${CMAKE_CURRENT_SOURCE_DIR}/../../CMakeGlobal/CMakeLists.txt )
