--- a/src/rhyme_slope_limiter/tests/CMakeLists.txt
+++ b/src/rhyme_slope_limiter/tests/CMakeLists.txt
@@ -10,5 +10,5 @@ set( test_deps
   rhyme_assertion
 )
 
-set( proj_src_dir ../.. )
+set( rhyme_src_dir ../.. )
 include( ${CMAKE_CURRENT_SOURCE_DIR}/../../../CMakeGlobal/tests/CMakeLists.txt )
