--- a/src/rhyme_string/CMakeLists.txt
+++ b/src/rhyme_string/CMakeLists.txt
@@ -19,5 +19,5 @@ set( srcs
   src/rhyme_string.f90
 )
 
-set( proj_src_dir .. )
+set( rhyme_src_dir .. )
 include( ${CMAKE_CURRENT_SOURCE_DIR}/../../CMakeGlobal/CMakeLists.txt )
