--- a/src/rhyme_units/CMakeLists.txt
+++ b/src/rhyme_units/CMakeLists.txt
@@ -20,5 +20,5 @@ set( srcs
   src/rhyme_units.f90
 )
 
-set( proj_src_dir .. )
+set( rhyme_src_dir .. )
 include( ${CMAKE_CURRENT_SOURCE_DIR}/../../CMakeGlobal/CMakeLists.txt )
