[WIP] FPP - Added new module physics and combined it with units

--- a/src/rhyme_physics/tests/CMakeLists.txt
+++ b/src/rhyme_physics/tests/CMakeLists.txt
@@ -1,7 +1,9 @@
-project( rhyme_samr_tests )
-set( test_subject rhyme_samr )
+project( rhyme_physics_tests )
+set( test_subject rhyme_physics )
 
-set( factories )
+set( factories
+  rhyme_log
+)
 
 set( test_deps
   rhyme_assertion
@@ -10,6 +12,8 @@ set( test_deps
 set( rhyme_src_dir ../.. )
 include( ${CMAKE_CURRENT_SOURCE_DIR}/../../../CMakeGlobal/tests/CMakeLists.txt )
 
+if_not_defined_define( HYDRO_SOLVER )
+if_not_defined_define( RT_SOLVER )
 if_not_defined_define( "NDIM" 3 )
 if_not_defined_define( "NCMP" 5 )
 if_not_defined_define( "NSPE" 3 )
