--- a/src/rhyme_physics/CMakeLists.txt
+++ b/src/rhyme_physics/CMakeLists.txt
@@ -1,7 +1,7 @@
-cmake_minimum_required( VERSION 3.7 )
+cmake_minimum_required( VERSION 3.12 )
 enable_language( Fortran )
 
-project( rhyme_units )
+project( rhyme_physics )
 
 if ( "${CMAKE_Fortran_COMPILER_ID}" STREQUAL "Intel" )
   set( CMAKE_Fortran_FLAGS "-stand f08" )
@@ -17,8 +17,15 @@ set( deps
 set( internal_deps )
 
 set( srcs
-  src/rhyme_units.f90
+  src/rhyme_physics_init.f90
+  src/rhyme_physics.f90
 )
 
 set( rhyme_src_dir .. )
 include( ${CMAKE_CURRENT_SOURCE_DIR}/../../CMakeGlobal/CMakeLists.txt )
+
+if_not_defined_define( HYDRO_SOLVER )
+if_not_defined_define( RT_SOLVER )
+if_not_defined_define( "NDIM" 3 )
+if_not_defined_define( "NCMP" 5 )
+if_not_defined_define( "NSPE" 3 )
