--- a/src/rhyme_physics/CMakeLists.txt
+++ b/src/rhyme_physics/CMakeLists.txt
@@ -24,8 +24,5 @@ set( srcs
 set( rhyme_src_dir .. )
 include( ${CMAKE_CURRENT_SOURCE_DIR}/../../CMakeGlobal/CMakeLists.txt )
 
-if_not_defined_define( HYDRO_SOLVER )
-if_not_defined_define( RT_SOLVER )
-if_not_defined_define( "NDIM" 3 )
-if_not_defined_define( "NCMP" 5 )
-if_not_defined_define( "NSPE" 3 )
+# Configs
+include( ${CMAKE_CURRENT_SOURCE_DIR}/${rhyme_src_dir}/../CMakeGlobal/configs/CMakeLists.txt )
