--- a/src/rhyme_hydro_base/tests/CMakeLists.txt
+++ b/src/rhyme_hydro_base/tests/CMakeLists.txt
@@ -9,3 +9,6 @@ set( test_deps
 
 set( rhyme_src_dir ../.. )
 include( ${CMAKE_CURRENT_SOURCE_DIR}/../../../CMakeGlobal/tests/CMakeLists.txt )
+
+# Configs
+include( ${CMAKE_CURRENT_SOURCE_DIR}/${rhyme_src_dir}/../CMakeGlobal/configs/CMakeLists.txt )
