refactor (samr_bc): based on new array-based components separated procedures into files

--- a/src/rhyme_samr_bc/CMakeLists.txt
+++ b/src/rhyme_samr_bc/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required( VERSION 3.7 )
+cmake_minimum_required( VERSION 3.12 )
 enable_language( Fortran )
 
 project( rhyme_samr_bc )
@@ -10,6 +10,7 @@ elseif( "${CMAKE_Fortran_COMPILER_ID}" STREQUAL "GNU" )
 endif()
 
 set( deps
+  rhyme_physics
   rhyme_samr
   rhyme_log
 )
@@ -17,9 +18,19 @@ set( deps
 set( internal_deps )
 
 set( srcs
-  src/rhyme_samr_bc_set_base_grid_boundaries.f90
+  src/rhyme_samr_bc_set_front_boundary.f90
+  src/rhyme_samr_bc_set_back_boundary.f90
+  src/rhyme_samr_bc_set_top_boundary.f90
+  src/rhyme_samr_bc_set_bottom_boundary.f90
+  src/rhyme_samr_bc_set_right_boundary.f90
+  src/rhyme_samr_bc_set_left_boundary.f90
+  src/rhyme_samr_bc_set_boundaries.f90
+  src/rhyme_samr_bc_init.f90
   src/rhyme_samr_bc.f90
 )
 
 set( rhyme_src_dir .. )
 include( ${CMAKE_CURRENT_SOURCE_DIR}/../../CMakeGlobal/CMakeLists.txt )
+
+# Configs
+include( ${CMAKE_CURRENT_SOURCE_DIR}/${rhyme_src_dir}/../CMakeGlobal/configs/CMakeLists.txt )
