--- a/src/rhyme_ideal_gas/tests/CMakeLists.txt
+++ b/src/rhyme_ideal_gas/tests/CMakeLists.txt
@@ -1,8 +1,10 @@
-project( rhyme_ideal_gas_tests )
+project ( rhyme_ideal_gas_tests )
 set( test_subject rhyme_ideal_gas )
 
 set( factories
+  rhyme_physics
   rhyme_hydro_base
+  rhyme_chemistry
 )
 
 set( test_deps
@@ -10,4 +12,7 @@ set( test_deps
 )
 
 set( rhyme_src_dir ../.. )
-include( ${CMAKE_CURRENT_SOURCE_DIR}/../../../CMakeGlobal/tests/CMakeLists.txt )
+include( ${CMAKE_CURRENT_SOURCE_DIR}/${rhyme_src_dir}/../CMakeGlobal/tests/CMakeLists.txt )
+
+# Configs
+include( ${CMAKE_CURRENT_SOURCE_DIR}/${rhyme_src_dir}/../CMakeGlobal/configs/CMakeLists.txt )
