--- a/src/rhyme_drawing/tests/CMakeLists.txt
+++ b/src/rhyme_drawing/tests/CMakeLists.txt
@@ -5,6 +5,8 @@ set( factories
   rhyme_samr
   rhyme_ideal_gas
   rhyme_hydro_base
+  rhyme_thermo_base
+  rhyme_log
 )
 
 set( test_deps
@@ -13,3 +15,6 @@ set( test_deps
 
 set( rhyme_src_dir ../.. )
 include( ${CMAKE_CURRENT_SOURCE_DIR}/../../../CMakeGlobal/tests/CMakeLists.txt )
+
+# Configs
+include( ${CMAKE_CURRENT_SOURCE_DIR}/${rhyme_src_dir}/../CMakeGlobal/configs/CMakeLists.txt )
