--- a/src/rhyme_initial_condition/tests/CMakeLists.txt
+++ b/src/rhyme_initial_condition/tests/CMakeLists.txt
@@ -3,7 +3,8 @@ set( test_subject rhyme_initial_condition )
 
 set( factories
   rhyme_samr
-  rhyme_units
+  rhyme_physics
+  rhyme_log
 )
 
 set( test_deps
@@ -18,3 +19,6 @@ configure_file(
 
 set( rhyme_src_dir ../.. )
 include( ${CMAKE_CURRENT_SOURCE_DIR}/../../../CMakeGlobal/tests/CMakeLists.txt )
+
+# Configs
+include( ${CMAKE_CURRENT_SOURCE_DIR}/${rhyme_src_dir}/../CMakeGlobal/configs/CMakeLists.txt )
