--- a/src/rhyme_chombo/tests/CMakeLists.txt
+++ b/src/rhyme_chombo/tests/CMakeLists.txt
@@ -2,7 +2,9 @@ project( rhyme_chombo_tests )
 set( test_subject rhyme_chombo )
 
 set( factories
+  rhyme_physics
   rhyme_samr
+  rhyme_log
 )
 
 set( test_deps
@@ -11,3 +13,6 @@ set( test_deps
 
 set( rhyme_src_dir ../.. )
 include( ${CMAKE_CURRENT_SOURCE_DIR}/../../../CMakeGlobal/tests/CMakeLists.txt )
+
+# Configs
+include( ${CMAKE_CURRENT_SOURCE_DIR}/${rhyme_src_dir}/../CMakeGlobal/configs/CMakeLists.txt )
