--- a/src/rhyme_irs/src/rhyme_riemann_problem/CMakeLists.txt
+++ b/src/rhyme_irs/src/rhyme_riemann_problem/CMakeLists.txt
@@ -19,3 +19,6 @@ set( srcs
 
 set( rhyme_src_dir ../../.. )
 include( ${CMAKE_CURRENT_SOURCE_DIR}/../../../../CMakeGlobal/CMakeLists.txt )
+
+# Configs
+include( ${CMAKE_CURRENT_SOURCE_DIR}/${rhyme_src_dir}/../CMakeGlobal/configs/CMakeLists.txt )
