refactor (irs): based on array-based components

--- a/src/rhyme_irs/CMakeLists.txt
+++ b/src/rhyme_irs/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required( VERSION 3.7 )
+cmake_minimum_required( VERSION 3.12 )
 enable_language( Fortran )
 
 project( rhyme_irs )
@@ -10,8 +10,9 @@ elseif( "${CMAKE_Fortran_COMPILER_ID}" STREQUAL "GNU" )
 endif()
 
 set( deps
+  rhyme_physics
   rhyme_hydro_base
-  rhyme_ideal_gas
+  rhyme_thermo_base
   rhyme_log
 )
 
@@ -20,20 +21,23 @@ set( internal_deps
 )
 
 set( srcs
-  src/rhyme_irs.f90
-  src/rhyme_irs_solve.f90
-  src/rhyme_irs_iterate.f90
-  src/rhyme_irs_sampling.f90
-  src/rhyme_irs_w_k.f90
-  src/rhyme_irs_w_starL_sho.f90
-  src/rhyme_irs_w_starR_sho.f90
-  src/rhyme_irs_w_kfan.f90
-  src/rhyme_irs_w_starL_fan.f90
-  src/rhyme_irs_w_starR_fan.f90
-  src/rhyme_irs_rp_side_to_cons.f90
-  src/rhyme_irs_nonlinear_wave_function.f90
   src/rhyme_irs_guess_p_star.f90
+  src/rhyme_irs_nonlinear_wave_function.f90
+  src/rhyme_irs_rp_side_to_cons.f90
+  src/rhyme_irs_w_starR_fan.f90
+  src/rhyme_irs_w_starL_fan.f90
+  src/rhyme_irs_w_kfan.f90
+  src/rhyme_irs_w_starR_sho.f90
+  src/rhyme_irs_w_starL_sho.f90
+  src/rhyme_irs_w_k.f90
+  src/rhyme_irs_sampling.f90
+  src/rhyme_irs_iterate.f90
+  src/rhyme_irs_solve.f90
+  src/rhyme_irs.f90
 )
 
 set( rhyme_src_dir .. )
 include( ${CMAKE_CURRENT_SOURCE_DIR}/../../CMakeGlobal/CMakeLists.txt )
+
+# Configs
+include( ${CMAKE_CURRENT_SOURCE_DIR}/${rhyme_src_dir}/../CMakeGlobal/configs/CMakeLists.txt )
