--- a/src/rhyme_muscl_hancock/src/rhyme_mh_workspace/CMakeLists.txt
+++ b/src/rhyme_muscl_hancock/src/rhyme_mh_workspace/CMakeLists.txt
@@ -1,9 +1,9 @@
-cmake_minimum_required( VERSION 3.7 )
+cmake_minimum_required( VERSION 3.12 )
 enable_language( Fortran )
 
 project( rhyme_mh_workspace )
 
-if ( "${CMAKE_Fortran_COMPILER_ID}" STREQUAL "Intel" )
+if( "${CMAKE_Fortran_COMPILER_ID}" STREQUAL "Intel" )
   set( CMAKE_Fortran_FLAGS "-stand f08" )
 elseif( "${CMAKE_Fortran_COMPILER_ID}" STREQUAL "GNU" )
   set( CMAKE_Fortran_FLAGS "-std=f2008" )
@@ -25,3 +25,6 @@ set( srcs
 
 set( rhyme_src_dir ../../.. )
 include( ${CMAKE_CURRENT_SOURCE_DIR}/../../../../CMakeGlobal/CMakeLists.txt )
+
+# Configs
+include( ${CMAKE_CURRENT_SOURCE_DIR}/${rhyme_src_dir}/../CMakeGlobal/configs/CMakeLists.txt )
