refactor (muscl_hancodk): based on updated modules moved half step extrapolation procedure from ideal gas to this module

--- a/src/rhyme_muscl_hancock/CMakeLists.txt
+++ b/src/rhyme_muscl_hancock/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required( VERSION 3.7 )
+cmake_minimum_required( VERSION 3.12 )
 enable_language( Fortran )
 
 project( rhyme_muscl_hancock )
@@ -10,9 +10,10 @@ elseif( "${CMAKE_Fortran_COMPILER_ID}" STREQUAL "GNU" )
 endif()
 
 set( deps
-  rhyme_ideal_gas
-  rhyme_slope_limiter
+  rhyme_physics
+  rhyme_thermo_base
   rhyme_irs
+  rhyme_slope_limiter
   rhyme_log
 )
 
@@ -21,6 +22,7 @@ set( internal_deps
 )
 
 set( srcs
+  src/rhyme_muscl_hancock_half_step_extrapolation.f90
   src/rhyme_muscl_hancock_solve_memory_intensive.f90
   src/rhyme_muscl_hancock_solve_cpu_intensive.f90
   src/rhyme_muscl_hancock_solve.f90
@@ -30,3 +32,6 @@ set( srcs
 
 set( rhyme_src_dir .. )
 include( ${CMAKE_CURRENT_SOURCE_DIR}/../../CMakeGlobal/CMakeLists.txt )
+
+# Configs
+include( ${CMAKE_CURRENT_SOURCE_DIR}/${rhyme_src_dir}/../CMakeGlobal/configs/CMakeLists.txt )
