--- a/src/rhyme_muscl_hancock/tests/CMakeLists.txt
+++ b/src/rhyme_muscl_hancock/tests/CMakeLists.txt
@@ -4,13 +4,13 @@ set( test_subject rhyme_muscl_hancock )
 set( CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS}" )
 
 set ( factories
-  rhyme_chombo
-  rhyme_ideal_gas
-  rhyme_hydro_base
+  rhyme_thermo_base
+  rhyme_cfl
   rhyme_samr
   rhyme_samr_bc
   rhyme_irs
   rhyme_slope_limiter
+  rhyme_chombo
   rhyme_log
 )
 
@@ -20,3 +20,6 @@ set( test_deps
 
 set( rhyme_src_dir ../.. )
 include( ${CMAKE_CURRENT_SOURCE_DIR}/../../../CMakeGlobal/tests/CMakeLists.txt )
+
+# Configs
+include( ${CMAKE_CURRENT_SOURCE_DIR}/${rhyme_src_dir}/../CMakeGlobal/configs/CMakeLists.txt )
