--- a/src/rhyme_param_parser/tests/CMakeLists.txt
+++ b/src/rhyme_param_parser/tests/CMakeLists.txt
@@ -7,11 +7,9 @@ set( test_deps
   rhyme_assertion
 )
 
-configure_file(
-  "../../../parameters.conf.example"
-  "parameters.conf.example"
-  COPYONLY
-)
+configure_file( "../../../parameters_1d.conf.example" "parameters_1d.conf.example" COPYONLY )
+configure_file( "../../../parameters_2d.conf.example" "parameters_2d.conf.example" COPYONLY )
+configure_file( "../../../parameters_3d.conf.example" "parameters_3d.conf.example" COPYONLY )
 
 configure_file(
   "./assets/occurences.txt"
@@ -21,3 +19,6 @@ configure_file(
 
 set( rhyme_src_dir ../.. )
 include( ${CMAKE_CURRENT_SOURCE_DIR}/../../../CMakeGlobal/tests/CMakeLists.txt )
+
+# Configs
+include( ${CMAKE_CURRENT_SOURCE_DIR}/${rhyme_src_dir}/../CMakeGlobal/configs/CMakeLists.txt )
