refactor (main): based on NDIM and array-based components fix (in chemistry): only works for 3d simulation fix (in physics): component ids

--- a/CMakeGlobal/configs/CMakeLists.txt
+++ b/CMakeGlobal/configs/CMakeLists.txt
@@ -2,12 +2,13 @@ include( ${CMAKE_CURRENT_SOURCE_DIR}/${rhyme_src_dir}/../CMakeGlobal/if_not_defi
 include( ${CMAKE_CURRENT_SOURCE_DIR}/${rhyme_src_dir}/../CMakeGlobal/calc_number_of_components/CMakeLists.txt )
 
 set( HYDRO_SOLVER ON )
-set( RT_SOLVER ON )
+set( RT_SOLVER OFF )
 
-set( NUMBER_OF_DIM 1 )
+set( NUMBER_OF_DIM 3 )
 set( NUMBER_OF_SPECIES 3 )
 
 calc_number_of_components( ${NUMBER_OF_DIM} ${NUMBER_OF_SPECIES} NUMBER_OF_COMPONENTS )
+
 
 if( ${HYDRO_SOLVER} )
 if_not_defined_define( HYDRO_SOLVER )
