--- a/CMakeGlobal/if_not_defined_define/CMakeLists.txt
+++ b/CMakeGlobal/if_not_defined_define/CMakeLists.txt
@@ -6,7 +6,7 @@ function( if_not_defined_define key )
     "${${PROJECT_NAME}_COMPILE_DEFINITIONS}" MATCHES "^${key}"
     OR "${${PROJECT_NAME}_COMPILE_DEFINITIONS}" MATCHES ";${key}"
   ))
-    if( ${ARGN} )
+    if( ${ARGC} GREATER 1 )
       add_compile_definitions( ${key}=${ARGV1} )
     else()
       add_compile_definitions( ${key} )
